fix the position of the search bar on small screens

--- a/assets/scss/_search.scss
+++ b/assets/scss/_search.scss
@@ -13,6 +13,10 @@
 	@media screen and (max-width: 992px) {
 		width: 100%;
 		padding: .5em 0;
+		position: relative;
+		left: 0;
+		transform: none;
+		margin: 0 auto;
 	}
 
 	&_field {
